--- a/main.html
+++ b/main.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <div id="mainChart">
-    <input type="range" min="1" max="999" value="100" class="slider" id="income_slider" orient="vertical"/>
+    <input type="range" min="1" max="999" value="100" class="slider" id="myIncomeSlider" orient="vertical"/>
+    <input type="range" min="1" max="999" value="100" class="slider" id="otherIncomeSlider" orient="vertical"/>
     </div>
     <label for="ageInput">Your age:</label>
     <input type="text" id="ageInput" name="ageInput">
